--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,8 @@
     "version": "1.0.0",
     "permissions": [
         "webRequest"
+    ],
+    "host_permissions": [
+        "*://o2online.es/checkout/*"
     ]
 }
