--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
         "webRequest"
     ],
     "host_permissions": [
-        "*://o2online.es/checkout/*"
+        "*://o2online.es/checkout/*",
+        "*://o2online.es/api/coverage/telco/coverage/*"
     ],
     "background": {
         "service_worker": "service-worker.js",
