chore: add extension id for firefox

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -14,5 +14,10 @@
     "background": {
         "scripts": ["service-worker.js"],
         "type": "module"
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "acuerdosfibrao2@fercarcedo"
+        }
     }
 }
