--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -15,7 +15,11 @@
     },
     "browser_specific_settings": {
         "gecko": {
-            "id": "acuerdosfibrao2@fercarcedo"
+            "id": "acuerdosfibrao2@fercarcedo",
+            "strict_min_version": "102.0"
+        },
+        "gecko_android": {
+            "strict_min_version": "113.0"
         }
     }
 }
