--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -3,6 +3,10 @@
     "name": "Acuerdos fibra O2",
     "description": "Esta extensión muestra en la web de O2 qué red de fibra utiliza en tu dirección (fibra directa de Movistar, Adamo u Orange)",
     "version": "1.0.0",
+    "icons": {
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    },
     "permissions": [
         "scripting",
         "webRequest"
